<resources>
    <string name="app_name">Project01 CS2340</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_courses">Courses</string>
    <string name="menu_assignments">Assignments</string>
    <string name="menu_exams">Exams</string>
    <string name="menu_todo">To-Do List</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="course_id">Course ID</string>
    <string name="course_title">Course Title</string>
    <string name="professor">Professor</string>
    <string name="m">M</string>
    <string name="t">T</string>
    <string name="w">W</string>
    <string name="th">Th</string>
    <string name="f">F</string>
    <string name="time">Time</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="ok">OK</string>
    <string name="task">Task</string>
    <string name="add_assignment">Add Assignment</string>
    <string name="add_exam">Add Exam</string>
    <string name="examcourse_id">Course ID:</string>
    <string name="exam_name">Exam Name:</string>
    <string name="date_amp_time"><![CDATA[Date & Time:]]></string>
    <string name="location">Location:</string>
    <string name="exam_cancel">Cancel</string>
    <string name="exam_save">Save</string>
    <string name="exam_location">Location</string>
    <string name="exam_name2">Exam Name</string>
    <string name="exam_course_id">Course ID</string>
    <string name="exam_date">Date (mm/dd/yyyy)</string>
    <string name="exam_time">Time</string>
</resources>