<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_courses"
            android:icon="@drawable/icons8_course_100"
            android:title="@string/menu_courses" />
        <item
            android:id="@+id/nav_assignments"
            android:icon="@drawable/icons8_assignment_100"
            android:title="@string/menu_assignments" />
        <item
            android:id="@+id/nav_exams"
            android:icon="@drawable/icons8_exam_100"
            android:title="@string/menu_exams" />
        <item
            android:id="@+id/nav_todo"
            android:icon="@drawable/icons8_list_100"
            android:title="@string/menu_todo" />

    </group>
</menu>