<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.project01cs2340.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_courses"
        android:name="com.example.project01cs2340.CoursesFragment"
        android:label="@string/menu_courses"
        tools:layout="@layout/fragment_courses" />

    <fragment
        android:id="@+id/nav_assignments"
        android:name="com.example.project01cs2340.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_assignments"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_todo"
        android:name="com.example.project01cs2340.ItemFragment"
        android:label="@string/menu_todo"
        tools:layout="@layout/fragment_item_list" />
    <fragment
        android:id="@+id/nav_exams"
        android:name="com.example.project01cs2340.BlankFragment"
        android:label="@string/menu_exams"
        tools:layout="@layout/fragment_blank" />
</navigation>